; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bridge.c_bridge_ioctl_rts64.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_bridge.c_bridge_ioctl_rts64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bridge_softc = type { i32 }
%struct.ifbaconf64 = type { i32 }
%struct.ifbareq64 = type { i32 }

@BRIDGE_IOCTL_RTS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.bridge_softc*, i8*)* @bridge_ioctl_rts64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bridge_ioctl_rts64(%struct.bridge_softc* %0, i8* %1) #0 {
  %3 = alloca %struct.bridge_softc*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ifbaconf64*, align 8
  %6 = alloca %struct.ifbareq64, align 4
  %7 = alloca i32, align 4
  store %struct.bridge_softc* %0, %struct.bridge_softc** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.ifbaconf64*
  store %struct.ifbaconf64* %9, %struct.ifbaconf64** %5, align 8
  store i32 0, i32* %7, align 4
  %10 = load i32, i32* @BRIDGE_IOCTL_RTS, align 4
  %11 = load i32, i32* %7, align 4
  ret i32 %11
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
